# kumono

./: .gitignore  .woodpecker.yaml  AUR.md  BINARY.md  Cargo.toml  FEATURES.md  LICENSE  PKGBUILD  README.md  bacon.toml  charset.fish  coomer-rip.toml  coomer_rip.rs
.github/: dependabot-auto-merge.yml  dependabot.yml
.github/workflows/: build-release.yml  dependabot-auto-merge.yml
cli/: Cargo.toml
cli/src/: cli.rs  http.rs  main.rs  profile.rs  progress.rs  stats.rs
daemon/: Cargo.toml
kumono/: Cargo.toml
kumono/src/: lib.rs
lib/: Cargo.toml
src/: api.rs  auth.rs  cli.rs  client.rs  config.rs  ext.rs  file.rs  http.rs  input.rs  main.rs  post.rs  pretty.rs  profile.rs  progress.rs  services.rs  stats.rs  target.rs  usage.rs
