[package]
name = "kumono"
version = "0.67.1"
edition = "2024"
description = "Media ripper for coomer and kemono"
#homepage = "https://github.com/APT37/kumono"
repository = "https://github.com/APT37/kumono"
readme = "README.md"
documentation = "https://github.com/APT37/kumono"
license = "MIT-0"
keywords = ["kemono", "coomer", "filter", "api", "download"]

[dependencies]
anyhow = "1.0.*"
clap = { version = "4.5.*", features = ["derive"] }
futures = "0.3.*"
futures-util = "0.3.*"
indicatif = "0.18.*"
itertools = "0.14.*"
num-format = "0.4.*"
pretty-duration = "0.1.*"
regex = "1.12.*"
# consider using "cookies", "form" and "query" whem implementing login
reqwest = { version = "0.13.*", default-features = false, features = [
    "charset",
    "gzip",
    "http2",
    "json",
    "rustls",
    "socks",
    "stream",
] }
serde = { version = "1.0.*", features = ["derive"] }
sha256 = "1.6.*"
thiserror = "2.0.*"
tokio = { version = "1.49.*", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
serde_json = "1.0.*"
strum = "0.27.*"
strum_macros = "0.27.*"

[profile.dev]
opt-level = 0
debug = true
strip = false
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false
