[package]
name = "cli"
version = "0.20.4"
edition.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
futures-util.workspace = true
indicatif = "0.17.*"
kumono = { path = "../kumono" }
num-format = "0.4.*"
pretty-duration = "0.1.*"
reqwest.workspace = true
serde.workspace = true
sha256.workspace = true
size.workspace = true
strum_macros = "0.27.*"
tokio.workspace = true
