[package]
name = "cli"
version = "0.29.0"
edition.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
futures-util.workspace = true
indicatif.workspace = true
kumono = { path = "../kumono" }
num-format.workspace = true
pretty-duration.workspace = true
reqwest.workspace = true
serde.workspace = true
sha256.workspace = true
size.workspace = true
strum_macros.workspace = true
tokio.workspace = true
