[package]
name = "daemon"
version = "0.1.0"
edition.workspace = true
description.workspace = true

[dependencies]
axum = "0.8.*"
axum-macros = "0.5.*"
clap.workspace = true
const_format = "0.2.*"
env_logger = { version = "0.11.*", default-features = false, features = [
    "auto-color",
    "humantime",
] }
kumono = { path = "../kumono" }
log = "0.4.*"
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
