[package]
name = "daemon"
version = "0.1.0"
edition.workspace = true
description.workspace = true

[dependencies]
axum.workspace = true
axum-macros.workspace = true
clap.workspace = true
const_format.workspace = true
env_logger.workspace = true
kumono = { path = "../kumono" }
log.workspace = true
reqwest.workspace = true
serde.workspace = true
sqlx.workspace = true
sha256.workspace = true
tokio.workspace = true
