[package]
name = "lib"
version = "0.1.0"
edition.workspace = true
description.workspace = true
# readme.workspace = true

[dependencies]
# deunicode = "1.6.*"
# serde = { version = "1.0.*", features = ["derive"] }

[dev-dependencies]
# reqwest = { version = "0.12.*", default-features = false, features = [
# "blocking",
# "http2",
# "json",
# "rustls-tls",
# ] }